--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,10 +44,10 @@ jobs:
          
       - name: Build tipa
         run: |
-          sed -i '' "s/COMPILE_TIME=\`TZ=UTC-8 date \\\\\"+%Y-%m-%d_%H%M%S\\\\\"\`/COMPILE_TIME=${{ env.ctime }}/g" ./Fugu15/Makefile
+          sed -i '' "s/COMPILE_TIME=\`TZ=UTC-8 date \\\\\"+%Y-%m-%d_%H%M%S\\\\\"\`/COMPILE_TIME=${{ env.ctime }}/g" ./Dopamine/Makefile
           sudo security import Exploits/fastPath/arm.pfx -k /Library/Keychains/System.keychain -P password -A
           make
-          mv Fugu15/Fugu15.tipa Dopamine.tipa
+          mv Dopamine/Dopamine.tipa Dopamine.tipa
       
       - name: Release
         uses: softprops/action-gh-release@v1
