[Dopamine] ContentView.swift: hook update.

--- a/.github/workflows/Dopamine.yml
+++ b/.github/workflows/Dopamine.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: auto_${{ env.ctimestamp }}
+          tag_name: ${{ env.ctime }}
           name: "Dopamine: ${{ env.shorthash }}_${{ env.ctime }}"
           body_path: ./release.md
           draft: true
